--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -60,20 +60,24 @@
   list-style: none;
   border: 4px;
 
-  background-color: rgb(247, 238, 238);
+  background-color: rgb(179, 169, 169);
   width: 300px;
   padding-top: 0px;
   border-bottom: 4px solid black;
   justify-content: center;
   align-items: center;
-  border-radius: color gray;
 }
 li {
-  border: 1px solid black;
+  border: 1px solid rgb(156, 148, 148);
 }
 
 .listItem {
   display: flex;
   flex-direction: column;
   width: 100px;
+}
+
+.valueUser {
+  color: black;
+  font-weight: bold;
 }
