--- a/src/components/FriendListItem/FriendListItem.module.css
+++ b/src/components/FriendListItem/FriendListItem.module.css
@@ -1,10 +1,8 @@
 .container {
-  height: 200px;
+  height: 180px;
   width: 100px;
   border: 2px solid black;
   border-radius: 5px;
-  /* box-shadow: 0px 0px 0px 0px #000, -0px 0px 0px 0px #000, 0px 0px 0px 0px #000,
-    0px -0px 0px 0px #000; */
 }
 
 .images {
@@ -21,4 +19,16 @@
   flex-direction: column;
   justify-items: center;
   align-items: center;
+}
+
+.textStatusOn {
+  color: green;
+  display: flex;
+  justify-content: center;
+}
+
+.textStatusOff {
+  color: red;
+  display: flex;
+  justify-content: center;
 }
