--- a/src/components/FriendListItem/FriendListItem.module.css
+++ b/src/components/FriendListItem/FriendListItem.module.css
@@ -12,6 +12,7 @@
   align-items: center;
   padding-top: 15px;
   margin: auto;
+  padding-bottom: 10px;
 }
 
 .textName {
@@ -19,6 +20,7 @@
   flex-direction: column;
   justify-items: center;
   align-items: center;
+  padding-bottom: 10px;
 }
 
 .textStatusOn {
