--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -30,6 +30,8 @@
   line-height: 1;
   font-weight: bold;
   width: 100%;
+  padding-bottom: 10px;
+  padding-top: 10px;
 }
 
 .tagUser {
@@ -40,6 +42,7 @@
   font-weight: 400;
   font-size: 15px;
   line-height: 1;
+  padding-bottom: 10px;
 }
 
 .locationUser {
