--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,6 +1,6 @@
 .container {
   width: 300px;
-  height: 306px;
+  height: 295px;
   border: 4px solid black;
   border-radius: 4px;
 }
@@ -62,13 +62,13 @@
   flex-direction: row;
   list-style: none;
   border: 4px;
-
   background-color: rgb(179, 169, 169);
   width: 300px;
   padding-top: 0px;
-  border-bottom: 4px solid black;
+  /* border-bottom: 4px solid black; */
   justify-content: center;
   align-items: center;
+  height: 45px;
 }
 li {
   border: 1px solid rgb(156, 148, 148);
